--- a/sudoku.ipynb
+++ b/sudoku.ipynb
@@ -1,17 +1,149 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "5aebc52e",
    "metadata": {},
+   "source": [
+    "# Quantum Sudoku Solver with Qiskit\n",
+    "This notebook demonstrates how to approach solving a simple Sudoku puzzle using quantum computing concepts with Qiskit. We'll use a small 4x4 Sudoku for demonstration, as current quantum hardware and simulators are not yet capable of efficiently solving full 9x9 puzzles."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82a43661",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Aer' from 'qiskit' (c:\\Users\\tmgli\\Documents\\Source\\quantum\\.venv\\Lib\\site-packages\\qiskit\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Install Qiskit if not already installed (uncomment if needed)\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# !pip install qiskit\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mqiskit\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m QuantumCircuit, Aer, execute\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mqiskit\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvisualization\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m plot_histogram\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'Aer' from 'qiskit' (c:\\Users\\tmgli\\Documents\\Source\\quantum\\.venv\\Lib\\site-packages\\qiskit\\__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "# Install Qiskit if not already installed (uncomment if needed)\n",
+    "# !pip install qiskit\n",
+    "\n",
+    "from qiskit import QuantumCircuit\n",
+    "from qiskit.visualization import plot_histogram\n",
+    "from qiskit_ibm_runtime.fake_provider import FakeEssexV2\n",
+    "from qiskit_ibm_runtime import EstimatorV2 as Estimator\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c980ac2",
+   "metadata": {},
+   "source": [
+    "## Problem Setup: 4x4 Sudoku\n",
+    "\n",
+    "We will use a 4x4 Sudoku puzzle for this demonstration. The goal is to fill the grid so that each row, column, and 2x2 box contains the numbers 1 to 4 exactly once. We'll encode the Sudoku constraints as a quantum problem and use Qiskit to find a solution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9abce675",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define a sample 4x4 Sudoku puzzle (0 = empty)\n",
+    "sudoku = np.array([\n",
+    "    [1, 0, 0, 4],\n",
+    "    [0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0],\n",
+    "    [2, 0, 0, 3]\n",
+    "])\n",
+    "\n",
+    "print(\"Initial 4x4 Sudoku Puzzle:\")\n",
+    "print(sudoku)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff3cd3e9",
+   "metadata": {},
+   "source": [
+    "## Quantum Encoding and Constraints\n",
+    "\n",
+    "Each cell can take values 1-4, which can be encoded using 2 qubits per cell (since 2 qubits = 4 states). For a 4x4 Sudoku, we need 16 cells × 2 qubits = 32 qubits. We'll encode the constraints (unique values in rows, columns, and boxes) as quantum logic, but for demonstration, we'll show how to set up the circuit and measure possible solutions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2acd431",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For demonstration, create a quantum circuit with 32 qubits (2 per cell)\n",
+    "n_cells = 16\n",
+    "n_qubits = n_cells * 2\n",
+    "qc = QuantumCircuit(n_qubits)\n",
+    "\n",
+    "# Initialize all qubits in superposition (all possible assignments)\n",
+    "qc.h(range(n_qubits))\n",
+    "\n",
+    "# (In a real implementation, add quantum logic for Sudoku constraints here)\n",
+    "\n",
+    "qc.draw('mpl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e011d31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use a fake backend for demonstration (as in helloworld)\n",
+    "backend = FakeEssexV2()\n",
+    "\n",
+    "# For demonstration, we will not run a real quantum job, but show a dummy histogram\n",
+    "# In a real scenario, you would use an Estimator or Sampler to run the circuit and get results\n",
+    "\n",
+    "dummy_counts = {'00000000000000000000000000000000': 512, '11111111111111111111111111111111': 512}\n",
+    "plot_histogram(dummy_counts)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f4a55ee",
+   "metadata": {},
+   "source": [
+    "## Limitations and Next Steps\n",
+    "\n",
+    "This notebook demonstrates the basic idea of encoding a Sudoku puzzle into a quantum circuit using Qiskit. However, a full quantum Sudoku solver requires encoding all Sudoku constraints as quantum logic (using multi-qubit gates and possibly Grover's algorithm or QAOA). This is a complex task and not practical for large puzzles with current quantum hardware. For further exploration, see Qiskit's documentation on combinatorial optimization and quantum algorithms."
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
