--- a/Deutsch-Jozsa Braket.ipynb
+++ b/Deutsch-Jozsa Braket.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "55118d31",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "c02cbbfa",
    "metadata": {},
    "outputs": [
@@ -70,6 +70,8 @@
      "text": [
       "Warning: Could not verify AWS credentials. Set AWS_PROFILE or configure credentials.\n",
       "Unable to locate credentials\n",
+      "Braket session created.\n",
+      "Warning: Could not query SV1 (likely missing credentials or permissions): Unable to locate credentials\n",
       "Braket session created.\n",
       "Warning: Could not query SV1 (likely missing credentials or permissions): Unable to locate credentials\n"
      ]
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "67dbb4fc",
    "metadata": {},
    "outputs": [],
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "f3a3c66e",
    "metadata": {},
    "outputs": [],
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "4aaa7984",
    "metadata": {},
    "outputs": [],
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "7def09f0",
    "metadata": {},
    "outputs": [
@@ -307,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "3fe34b5d",
    "metadata": {},
    "outputs": [
@@ -380,10 +382,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "9c892351",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping SV1 submit: set BRAKET_S3_BUCKET and BRAKET_S3_PREFIX to run on AWS.\n"
+     ]
+    }
+   ],
    "source": [
     "# Configure S3 bucket/prefix for Braket task results\n",
     "# Ensure the bucket exists in your chosen region and you have write permissions\n",
@@ -394,7 +404,7 @@
     "oracle = dj_oracle(\"balanced\", n, seed=123)\n",
     "dj_circ = dj_algorithm(oracle, n)\n",
     "\n",
-    "sv1_device = sv1  # already initialized with session\n",
+    "sv1_device = \"sv1\"  # already initialized with session\n",
     "\n",
     "if S3_BUCKET == \"YOUR-BRAKET-BUCKET\":\n",
     "    print(\"Skipping SV1 submit: set BRAKET_S3_BUCKET and BRAKET_S3_PREFIX to run on AWS.\")\n",
